2020-04-27  b606  <7627533+b606@users.noreply.github.com>

	* Logger.cs:
	* Patcher.cs:
	* StatsLogger.cs:
	* InspectionPatch.cs:
	* StringExtension.cs:
	* RulesForPawnPatch.cs: Added file header.

	* LanguageWorker_French.cs:
	* LanguageWorker_French_Debug.cs: Added file header and moved
	currently unused code to LanguageWorker_French_Debug.cs.

	* RimWorld_LanguageWorker_French.csproj: The name is
	officially changed to LanguageWorker_French_Mod. Patches use
	Pardeike's libHarmony.

	* packages.config: Update libHarmony version.

2020-04-26  b606  <7627533+b606@users.noreply.github.com>

	* InspectionPatch.cs:
	* RimWorld_LanguageWorker_French.csproj: Added a patch for
	debugging RimWorld and Verse classes.

	* LanguageWorker_French.cs: Documentation and cleanup.

	* Patcher.cs: Added a separate method InspectPatches().

	* RulesForPawnPatch.cs: Fix the patch side effect with a
	libHarmony __state variable.

2020-04-26  b606  <7627533+b606@users.noreply.github.com>

	* StatsLogger.cs: Fix Graphviz nodes with templates <...> in
	the method name. 

2020-04-25  b606  <7627533+b606@users.noreply.github.com>

	* Patcher.cs:
	* RulesForPawnPatch.cs:
	* LanguageWorker_French.cs:
	* RimWorld_LanguageWorker_French.csproj: Added a patch to fix
	the kind label and gender in the rules generated by
	GrammarUtility.RulesForPawn.

2020-04-25  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French_Debug.cs: All Loggers are private
	static members with public static debugging functions.

2020-04-24  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French_Debug.cs: Reduce log messages by
	memorizing the already debugged call stacks.

2020-04-23  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs:
	* LanguageWorker_French_Debug.cs: changed ArtNames to be
	processed as normal titles.

2020-04-21  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Moved debugging stuff to